--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 4173",
-    "test1": "node resources/scripts/test.js"
+    "deploy": "node resources/scripts/gh-pages-deploy.js"
   },
   "dependencies": {
     "vue": "^3.2.36"
