--- a/.github/workflows/gh-pages-deploy.yaml
+++ b/.github/workflows/gh-pages-deploy.yaml
@@ -1,8 +1,7 @@
 name: Deploy to GitHub Pages
 on:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: 17 5 * * *
 jobs:
   gh-pages-deploy:
     name: Deploying to gh-pages
