--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smarthome-webshop-assistant",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -8,11 +8,13 @@
     "deploy": "node resources/scripts/gh-pages-deploy.js"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
+    "bootstrap": "^5.2.0-beta1",
     "vue": "^3.2.36"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
-    "vite": "^2.9.12",
-    "execa": "latest"
+    "execa": "^6.1.0",
+    "vite": "^2.9.12"
   }
 }
