--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "smarthome-webshop-assistant",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.0-beta1",
-    "vue": "^3.2.36"
+    "vue": "latest"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
+    "@vitejs/plugin-vue": "^3.0.0",
     "execa": "^6.1.0",
-    "vite": "^2.9.14"
+    "vite": "^3.0.0"
   }
 }
