--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "deploy": "node resources/scripts/gh-pages-deploy.js"
   },
   "dependencies": {
-    "@floating-ui/dom": "^0.5.4",
-    "bootstrap": "^5.2.0-beta1",
+    "@floating-ui/dom": "^1.0.0",
+    "bootstrap": "^5.2.0",
     "vue": "latest"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.0.0",
+    "@vitejs/plugin-vue": "^3.0.1",
     "execa": "^6.1.0",
-    "vite": "^3.0.0"
+    "vite": "^3.0.2"
   }
 }
