--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@floating-ui/dom": "^1.0.6",
     "bootstrap": "^5.2.2",
+    "pinia": "^2.0.24",
     "vue": "^3.2.45",
     "vue-select": "^4.0.0-beta.6"
   },
